--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 20, 2022 11:07:11 PM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 21, 2022 10:00:40 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Signin page validation for User</p>
             <p class="text-sm">
-              <span>11:07:12 PM</span> / <span>00:00:12:049</span>
+              <span>10:00:40 AM</span> / <span>00:00:12:771</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Signin page validation for User</h5>
-<span class='badge badge-success'>09.20.2022 11:07:12 PM</span>
-<span class='badge badge-danger'>09.20.2022 11:07:24 PM</span>
-<span class='badge badge-default'>00:00:12:049</span>
+<span class='badge badge-success'>09.21.2022 10:00:40 AM</span>
+<span class='badge badge-danger'>09.21.2022 10:00:53 AM</span>
+<span class='badge badge-default'>00:00:12:771</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -149,13 +149,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 20, 2022 11:07:11 PM</h3>
+<h3>Sep 21, 2022 10:00:40 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 20, 2022 11:07:24 PM</h3>
+<h3>Sep 21, 2022 10:00:53 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -245,7 +245,7 @@
 </div></div>
 <script>
 var timeline = {
-"Signin page validation for User":12.049
+"Signin page validation for User":12.771
 };
 </script>
 <div class="row">
